# oop

./: README.md  README1.md  lab1.md  lab2.md  lab3.md  readme.md
01-project-structure/: .gitignore  CMakeLists.txt
01-project-structure/include/functions/: functions.h
01-project-structure/src/: functions.cc
01-project-structure/tests/: functions_tests.cc
02-static-container/: .gitignore  CMakeLists.txt  static_container.cc
base/: .editorconfig  .gitignore  CMakeLists.txt
base/example1-ratio/: CMakeLists.txt  main.cpp
base/example2-ratio/: CMakeLists.txt  main.cpp
base/labs/: extra-debian.md  lab0-preparation.md  lab1-io.md  lab2-classes.md  lab3-containers.md  lab4-polymorphism.md  lab5-tui.md  lab6-gui.md
base/practice1-io/: CMakeLists.txt  main.cpp
base/practice1-std-iostream/: CMakeLists.txt
base/practice2a-std-vector/: CMakeLists.txt  main.cpp
base/practice2a-vector/: CMakeLists.txt
base/practice2b-random/: CMakeLists.txt
base/practice2b-std-random/: CMakeLists.txt  main.cpp
base/practice2c-sfml/: CMakeLists.txt  main.cpp
base/practice3-std-string/: CMakeLists.txt  main.cpp
base/practice4a-std-thread-account/: CMakeLists.txt  main.cpp
base/practice4b-std-thread-matrices/: CMakeLists.txt  main.cpp
electives-advanced/: procedure.md  task1-c-opaque-structs.md  task1-opaque-structs.md  task2-sfml-graphics.md  task2-sfml.md  task3-sso.md  task4-parallel-multiplication.md  task4-shared-ptr.md  task5-shared-ptr.md
electives-beginner/: CMakeLists.txt
electives-beginner/lecture1-bool-int-float/: begin4.cpp  boolean9.cpp  integer7.cpp
electives-beginner/lecture2-if-while-for/: case10.cpp  for7.cpp  if8.cpp  series13.cpp  while9.cpp
electives-beginner/lecture3-func/: printf.cpp  proc34.cpp  recur1.cpp
electives-beginner/lecture4-array/: !HOMETASK.txt  array05.cpp  array95.cpp  demo.cpp  minmax10.cpp
electives-beginner/lecture5-image/: main.cpp
