cmake_minimum_required(VERSION 3.5)

project("beginner" CXX)

add_executable("lecture1-begin4"   "lecture1-bool-int-float/begin4.cpp")
add_executable("lecture1-boolean9" "lecture1-bool-int-float/boolean9.cpp")
add_executable("lecture1-integer7" "lecture1-bool-int-float/integer7.cpp")

add_executable("lecture2-case10"   "lecture2-if-while-for/case10.cpp")
add_executable("lecture2-for7"     "lecture2-if-while-for/for7.cpp")
add_executable("lecture2-if8"      "lecture2-if-while-for/if8.cpp")
add_executable("lecture2-series13" "lecture2-if-while-for/series13.cpp")
add_executable("lecture2-while9"   "lecture2-if-while-for/while9.cpp")

add_executable("lecture3-printf"   "lecture3-func/printf.cpp")
add_executable("lecture3-proc34"   "lecture3-func/proc34.cpp")
add_executable("lecture3-recur1"   "lecture3-func/recur1.cpp")
